@@ -66,9 +66,16 @@ if [ "$MAJOR_VERSION" -lt 21 ]; then
   exit 1
 fi
 
-for a in $@
+if [ "$MAJOR_VERSION" -ge 24 ]; then
+  FLAGS="$FLAGS -XX:+UnlockExperimentalVMOptions"
+  FLAGS="$FLAGS -XX:+UseCompactObjectHeaders"
+fi
+
+for a in "$@"
 do
-  if [ $a = "--debug" ]; then FLAG="$FLAG -XX:-OmitStackTraceInFastThrow"; fi
+  if [ "$a" = "--debug" ]; then
+    FLAGS="$FLAGS -XX:-OmitStackTraceInFastThrow"
+  fi
 done
 
 
@@ -84,19 +91,23 @@ ulimit -S -s unlimited
 # Constrain JVM memory
 export MALLOC_ARENA_MAX=1
 
-# Set UTF-8 local
-if [ `locale -a | grep C.UTF-8` ]; then OM_LOCAL="C.UTF-8"
-elif [ `locale -a | grep en_US.utf8` ]; then OM_LOCAL="en_US.utf8"
-elif [ `locale -a | grep utf8` ]; then OM_LOCAL=`locale -a |  grep utf8 | head -1`
+# Set UTF-8 locale
+if locale -a | grep -q '^C\.UTF-8$'; then
+  OM_LOCAL="C.UTF-8"
+elif locale -a | grep -q '^en_US\.utf8$'; then
+  OM_LOCAL="en_US.utf8"
+elif locale -a | grep -i 'utf8' > /dev/null; then
+  OM_LOCAL=$(locale -a | grep -i 'utf8' | head -1)
 else
-  echo "No UTF8 locale found among installed locales"
+  echo "No UTF-8 locale found among installed locales"
   locale -a
 fi
 
 if [ -n "$OM_LOCAL" ]; then
-  export LC_ALL=$OM_LOCAL
-  export LANG=$OM_LOCAL
+  export LC_ALL="$OM_LOCAL"
+  export LANG="$OM_LOCAL"
 fi
+
 
 ## Just to be sure
 export _JAVA_OPTIONS="-Duser.home=\"${HOME_DIRECTORY}\" -Djava.io.tmpdir=\"${FULL_TMPDIR}\""
@@ -104,7 +115,7 @@ export _JAVA_OPTIONS="-Duser.home=\"${HOME_DIRECTORY}\" -Djava.io.tmpdir=\"${FUL
 java -Djava.io.tmpdir="${FULL_TMPDIR}" -Duser.home="${HOME_DIRECTORY}" -Dsun.jnu.encoding=UTF-8 -Dfile.encoding=UTF-8 -Duser.country=US -Duser.language=en -Xss2M -Xms64m -Xmx${MEMORY} -Dosgi.configuration.area="${OSGI_CONFIGDIR}" -Djdk.util.zip.disableZip64ExtraFieldValidation=true $FLAGS -XX:ReservedCodeCacheSize=128m -XX:MaxMetaspaceSize=256m -XX:CompressedClassSpaceSize=128m \
   -XX:+UseSerialGC -XX:CICompilerCount=2 -XX:ConcGCThreads=1 -XX:-BackgroundCompilation -XX:+UseStringDeduplication \
   --add-opens java.base/java.lang.invoke=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.nio.file=ALL-UNNAMED \
-  -cp "${LOCATION}/launcher/*" org.openmole.launcher.Launcher --plugins "${LOCATION}/plugins/" --priority "logging" --run org.openmole.runtime.SimExplorer --osgi-directory "${OSGI_CONFIGDIR}" --osgi-locking-none -- --workspace "${OPENMOLE_WORKSPACE}" $ARGS
+  -cp "${LOCATION}/launcher/*" org.openmole.launcher.Launcher --plugins "${LOCATION}/plugins/" --priority "logging" --run org.openmole.runtime.SimExplorer --osgi-directory "${OSGI_CONFIGDIR}" -- --workspace "${OPENMOLE_WORKSPACE}" $ARGS
 
 RETURNCODE=$?
 
